# hass-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: call_service.rs  example_1.rs  fetch_items.rs  get_cmds.rs  get_cmds_async_std.rs  new_ping.rs  ping.rs  subscribe_event.rs
src/: client.rs  command.rs  config.rs  errors.rs  events.rs  lib.rs  messages.rs  response.rs  runtime.rs  wsconn.rs
src/types/: clientconfig.rs  command.rs  config.rs  entities.rs  events.rs  issue.rs  mod.rs  panels.rs  registry_area.rs  registry_device.rs  registry_entity.rs  response.rs  services.rs
tests/: integration_test.rs
