[package]
name = "hass-rs"
version = "0.4.0"
description = "An async websocket client for Home Assistant"
keywords = ["hass", "homeassistant", "tokio", "async-std"]
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danrusei/hass-rs"
documentation = "https://docs.rs/hass-rs"
readme = "README.md"
license = "MIT"
edition = "2021"
exclude = [".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
futures-util = "0.3.30"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.7"
tokio = { version = "1.36", features = ["sync"] }
tokio-tungstenite = "0.25"


[dev-dependencies]
lazy_static = "1.4.0"
env_logger = "0.11"
tokio = { version = "1.36", features = ["full"] }

[[example]]
name = "get_cmds"
path = "examples/get_cmds.rs"

[[example]]
name = "call_service"
path = "examples/call_service.rs"

[[example]]
name = "subscribe_event"
path = "examples/subscribe_event.rs"

